tests/should_fail/stuck_state.sm
initial foo
final bar

foo -- keys [ q ] --> bar
foo -- keys [ q ] --> baz
